--- a/dist.ini
+++ b/dist.ini
@@ -3,11 +3,16 @@ author  = Zakariyya Mughal <zmughal@cpan.org>
 license = Perl_5
 copyright_holder = Zakariyya Mughal
 copyright_year   = 2014
-version = 0.002
+version = 0.003
 
 [@Filter]
 -bundle = @Basic
 -remove = ExtraTests
+
+[MetaResources]
+IRC = irc://irc.perl.org/#pdl
+x_IRC = irc://irc.perl.org/#pdl
+;x_IRC.Web = http://widget01.mibbit.com/?server=irc.perl.org&channel=%23pdl
 
 [AutoPrereqs]
 [PkgVersion]
@@ -15,6 +20,9 @@ version = 0.002
 [GithubMeta]
 [PodWeaver]
 [MinimumPerl]
+
+[Prereqs]
+PDL = 2.007
 
 [ReadmeAnyFromPod / ReadmePodInRoot]
 ; generate README.pod in root (so that it can be displayed on GitHub)
